Bug 168835 - FILEOPEN PPTX Normal text opens as superscript if there is one superscript character in textbox
Summary: FILEOPEN PPTX Normal text opens as superscript if there is one superscript ch...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Textbox
  Show dependency treegraph
 
Reported: 2025-10-13 16:38 UTC by Gabor Kelemen (Collabora)
Modified: 2025-10-17 07:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with superscript/subscript characters in textbox from PP 2016 (29.52 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-10-13 16:38 UTC, Gabor Kelemen (Collabora)
Details
How it looks in and PP 2016 and in master (51.36 KB, image/png)
2025-10-13 16:43 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-10-13 16:38:42 UTC
Created attachment 203305 [details]
Example file with superscript/subscript characters in textbox from PP 2016

Found this one while investigating bug 168135

When attached file is opened, all the normal text opens as superscript if there is one superscript formatted character.

1. Open attached file
-> "Hello World%" is the same size as the percent sign, except the first o - because that is formatted as subscript.

Only the percent sign should be superscript. This was good in 25.8, broke with:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=629105991ee77335f856d746ef44408414cc150a

author	Balazs Varga <balazs.varga@collabora.com>	2025-08-29 11:00:19 +0200
committer	Balazs Varga <balazs.varga@collabora.com>	2025-09-01 17:09:30 +0200
commit 629105991ee77335f856d746ef44408414cc150a (patch)

Related: tdf#111927 - PPTX: fix placeholder title text becomes small

Adding CC to: Balazs Varga
Comment 1 Gabor Kelemen (Collabora) 2025-10-13 16:43:53 UTC
Created attachment 203307 [details]
How it looks in and PP 2016 and in master
Comment 2 Commit Notification 2025-10-14 19:58:54 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1cc50e3b8a838b487ce4359c3bdebabbdc298be2

tdf#168835 sd ooxml import fix wrong placeholder char style

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gerald Pfeifer 2025-10-16 19:32:27 UTC
Happily verified with todays daily build:

   Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
   Build ID: e86991e0a1a4e90f0d301868e1d8c3566b0f19b1
   CPU threads: 12; OS: Linux 6.17; UI render: default; VCL: gtk3
   Locale: en-US (en_US.UTF-8); UI: en-US

And thank you for adding a testcase!