tdf#168835 sd ooxml import fix wrong placeholder char style

Should not apply maEndProperties for char styles. Original issue
(tdf#111927) works without it as well.

regression after: 629105991ee77335f856d746ef44408414cc150a
(Related: tdf#111927 - PPTX: fix placeholder title text becomes small)

Change-Id: If83b267c7643ec5cc17955ff29e171efc39800b8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192372
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>